# FurretBot

./: .replit  README.md  appa.py  furret.py  pyproject.toml
