[tool.poetry]
name = "repl_python3_appaBot"
version = "0.1.0"
description = ""
authors = ["EmilianoLpez2 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
ffmpeg = "^1.4"
discord-ext-typed-commands = "^1.0.3"
PyNaCl = "^1.5.0"
yt-dlp = "^2022.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
